RESOLVED FIXED189742
REGRESSION (r196082): WebCoreNSURLSession leaks an NSString (_sessionDescription) in -dealloc
https://bugs.webkit.org/show_bug.cgi?id=189742
Summary REGRESSION (r196082): WebCoreNSURLSession leaks an NSString (_sessionDescript...
David Kilzer (:ddkilzer)
Reported 2018-09-19 03:05:22 PDT
WebCoreNSURLSession leaks an NSString (_sessionDescription) in -dealloc. <rdar://problem/44589774>
Attachments
Patch v1 (2.88 KB, patch)
2018-09-19 03:19 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2018-09-19 03:14:10 PDT
Caused by: Bug 153669: [Mac] Wrap a resource and resource loader in a NSURLSession-like object for use by lower level frameworks <https://bugs.webkit.org/show_bug.cgi?id=153669>
David Kilzer (:ddkilzer)
Comment 2 2018-09-19 03:19:18 PDT
Created attachment 350102 [details] Patch v1
WebKit Commit Bot
Comment 3 2018-09-19 09:22:59 PDT
Comment on attachment 350102 [details] Patch v1 Clearing flags on attachment: 350102 Committed r236209: <https://trac.webkit.org/changeset/236209>
WebKit Commit Bot
Comment 4 2018-09-19 09:23:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.