WebCoreNSURLSession leaks an NSString (_sessionDescription) in -dealloc <https://webkit.org/b/189742> <rdar://problem/44589774>

Reviewed by Joseph Pecoraro.

* platform/network/cocoa/WebCoreNSURLSession.h:
(WebCoreNSURLSession._sessionDescription): Change type from
NSString * to RetainPtr<NSString>.
* platform/network/cocoa/WebCoreNSURLSession.mm: Remove
@synthesized statement for sessionDescription so that custom
methods can be implemented to handle RetainPtr<NSString>.
(-[WebCoreNSURLSession sessionDescription]): Add.
(-[WebCoreNSURLSession setSessionDescription:]): Add.


Canonical link: https://commits.webkit.org/204698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236209 268f45cc-cd09-0410-ab3c-d52691b4dbfc